# kova-tts-clients

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-python.yml  publish.yml
examples/js/: stream.ts  sync.ts  websocket.ts
examples/python/: env.py  stream.py  sync.py  websocket.py
protocol/: api-contract.md
protocol/fixtures/: stream_audio_event.json  stream_timestamps_event.json  sync_response.json  ws_frames.json
